# coze-mcp-for-openclaw

./: .env.example  README.md  coze_mcp.py  pyproject.toml  skill_template.md
script/: make_skills.py
